fixing more dark mode colour problems.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -105,7 +105,7 @@
       text-align: center;
 
       > svg {
-        fill: $grey-color-dark;
+        @include theme("fill", $grey-color-dark);
       }
     }
 
