--- a/_sass/colour_themes.scss
+++ b/_sass/colour_themes.scss
@@ -31,7 +31,7 @@ $themes: (
                 $table-text-color: darken(#fdfdfd,15%),
                 $link-color: lighten(#2a7ae2,10%),
                 $link-color-visited: #2a7ae2,
-                $grey-color-dark:  darken($grey-color, 25%),
+                $grey-color-dark:  darken(#fdfdfd, 35%),
                 $table-background-colour-a: #212124,
                 $table-background-colour-b: lighten(#212124, 7%),
                 $table-background-colour-header: darken(#212124,10%),
